--- a/msvc-cursos/Dockerfile
+++ b/msvc-cursos/Dockerfile
@@ -22,5 +22,5 @@ RUN mkdir ./logs
 COPY --from=builder /app/msvc-cursos/target/msvc-cursos-0.0.1-SNAPSHOT.jar .
 
 EXPOSE 8002
-
-ENTRYPOINT ["java","-jar","msvc-cursos-0.0.1-SNAPSHOT.jar"]
+CMD sleep 10 && java -jar msvc-cursos-0.0.1-SNAPSHOT.jar
+#ENTRYPOINT ["java","-jar","msvc-cursos-0.0.1-SNAPSHOT.jar"]
