--- a/mcvc-usuarios/src/main/resources/application.properties
+++ b/mcvc-usuarios/src/main/resources/application.properties
@@ -17,3 +17,18 @@ logging.file.path=/app/logs
 
 
 msvc.cursos.url=${CURSOS_URL:msvc-cursos:8002/cursos}
+
+
+spring.cloud.kubernetes.secrets.enable-api=true
+spring.cloud.kubernetes.discovery.all-namespaces=true
+
+#Ambiente de desarrollo
+spring.profiles.active=dev 
+
+#Salud del contenedor
+
+#management.endpoints.web.exposure.include=*
+#management.endpoint.health.show-details=always
+#management.endpoint.health.probes.enabled=true
+#management.health.livenessstate.enabled=true
+#management.health.readinessstate.enabled=true
