--- a/mysql-pv.yaml
+++ b/mysql-pv.yaml
@@ -1,14 +1,19 @@
 apiVersion: v1
 kind: PersistentVolume
-metadata: 
+metadata:
   name: mysql-pv
-spec: #En la documentación de Kubernetes, Concepts, storage, persistent volumes están los atributos permitidos
+spec:
   capacity:
-    storage: 2Gi #Se mide en GB
+     storage: 2Gi
   volumeMode: Filesystem
-  storageClassName: standard
-  accessModes: 
-    - ReadWriteOnce
-  hostPath: 
-    path: /var/lib/mysql
-    type: DirectoryOrCreate  
+  storageClassName: ""
+#  storageClassName: standard
+  accessModes:
+    - ReadWriteMany
+  csi:
+    driver: efs.csi.aws.com
+    volumeHandle: fs-08689c3bb6b8cc021.efs.us-east-1.amazonaws.com
+#    - ReadWriteOnce
+#  hostPath:
+#    path: /var/lib/mysql
+#    type: DirectoryOrCreate
