--- a/configmap.yaml
+++ b/configmap.yaml
@@ -3,6 +3,8 @@ kind: ConfigMap
 metadata:
   name: msvc-usuarios
 data:
+  lb_auth_issuer_uri: http://172.17.97.21:32261
+  lb_usuarios_uri: http://172.17.97.21:32473
   port: "8001"
   db_host: mysql:3306
   database: msvc_usuarios
