--- a/deployment-usuarios.yaml
+++ b/deployment-usuarios.yaml
@@ -17,6 +17,17 @@ spec:
             name: usuarios
             ports:
             -  containerPort: 8001
+            env:
+              - name: LB_AUTH_ISSUER_URI
+                valueFrom:
+                  configMapKeyRef:
+                    name: msvc-usuarios
+                    key: lb_auth_issuer_uri
+              - name: LB_USUARIOS_URI
+                valueFrom:
+                  configMapKeyRef:
+                    name: msvc-usuarios
+                    key: lb_usuarios_uri
 #           resources:
 # ------------------
 # Orphaned comments:
