--- a/postgres-pv.yaml
+++ b/postgres-pv.yaml
@@ -6,13 +6,13 @@ spec: #En la documentación de Kubernetes, Concepts, storage, persistent volumes
   capacity:
     storage: 2Gi #Se mide en GB
   volumeMode: Filesystem
-  storageClassName: ""
+  storageClassName: standard
   accessModes: 
-  #  - ReadWriteOnce
-    - ReadWriteMany
-  csi:
-    driver: efs.csi.aws.com
-    volumeHandle: fs-0b903c266c7c888cb
- # hostPath: 
- #   path: /var/lib/postgresql/data
- #   type: DirectoryOrCreate  
+    - ReadWriteOnce
+  #  - ReadWriteMany
+  #csi:
+  #  driver: efs.csi.aws.com
+  #  volumeHandle: fs-0b903c266c7c888cb
+  hostPath: 
+    path: /var/lib/postgresql/data
+    type: DirectoryOrCreate  
